# ChessAI_Project

./: .gitignore  BishopTest1.html  CMakeCache.txt  CMakeLists.txt  ChessAI_Project.cpp  ChessAI_Project.sln  README.md  main.cpp  out.html  readme.md
components/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  MoveAlgorithms.cpp  MoveAlgorithms.h  ZobristKeyGenerator.cpp  ZobristKeyGenerator.h  bitBoardLoader.cpp  bitBoardLoader.h  board.cpp  board.h  helper.cpp  helper.h  presenter.cpp  presenter.h
components/MoveGenerator/: MoveGeneratorHelper.cpp
components/MoveGenerator/pieces/: king.cpp  knight.cpp  knight.h  pawn.cpp  queen.h  rook.cpp
components/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
components_tests/: Board_Tests.cpp  CMakeLists.txt  Helper_Tests.cpp  Pieces_Tests.cpp
src/: Board.cpp  Board.h  CMakeLists.txt  ChessAI_Project.cpp  Game.cpp  Game.h  MoveAlgorithms.cpp  MoveAlgorithms.h  ZobristKeyGenerator.cpp  ZobristKeyGenerator.h  bitboards.txt  helper.cpp  helper.h  presenter.cpp  presenter.h
src/MoveGenerator/: MoveGeneratorHelper.cpp  MoveGeneratorHelper.h
src/MoveGenerator/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  pawn.cpp  pawn.h  queen.cpp  rook.h
src/components/: Board.cpp  Board.h  CMakeLists.txt  bitBoardLoader.cpp
src/components_tests/: Board_Tests.cpp  CMakeLists.txt
src/contest/: gameclient.cpp  gameclient.h
test/: Board_Tests.cpp  CMakeLists.txt  Helper_Tests.cpp  Pieces_Tests.cpp
